Add interface of Group class добавление интерфейсной части класса

--- a/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj
+++ b/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="group.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="student.cpp" />
   </ItemGroup>
