--- a/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
+++ b/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="group.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="student.h">
