Add Group class implementation добавление реализации класса Group

--- a/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
+++ b/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="group.h">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="group.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="student.h">
