Update Manager and Student classes

--- a/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj
+++ b/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="group.cpp" />
     <ClCompile Include="group.h" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="manager.cpp" />
     <ClCompile Include="student.cpp" />
   </ItemGroup>
   <ItemGroup>
