--- a/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
+++ b/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="group.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="student.h">
