Add new entity classes: Teacher and Doctor добавление новых классов-сущностей

--- a/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
+++ b/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="teacher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="doctor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="student.h">
@@ -39,6 +45,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teacher.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="doctor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
