Add base-class Human and change classes: Student, Teacher and Doctor (use inheritance) использование наследования в С++ (добавление базового и производных классов)

--- a/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
+++ b/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="doctor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="human.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="student.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="doctor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="human.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
