--- a/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj
+++ b/OOPLessonExampleProject/OOPLessonExampleProject.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="doctor.cpp" />
     <ClCompile Include="group.cpp" />
     <ClCompile Include="group.h" />
+    <ClCompile Include="human.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="manager.cpp" />
     <ClCompile Include="student.cpp" />
@@ -137,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="doctor.h" />
+    <ClInclude Include="human.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="student.h" />
